--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 Flask==3.1.0
 gitdb==4.0.12
 GitPython==3.1.44
+gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
@@ -27,6 +28,7 @@ pyarrow==19.0.0
 pydeck==0.9.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 referencing==0.36.1
 requests==2.32.3
